# skills

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
crates/astedit/: Cargo.toml
crates/astedit/src/: apply.rs  cli.rs  error.rs  lib.rs  main.rs  output.rs  rewrite.rs  serialize.rs
crates/astedit/src/commands/: mod.rs  rename.rs  rewrite.rs
crates/astedit/tests/: rename_test.rs  rewrite_test.rs
crates/astedit/tests/common/: mod.rs
crates/astedit/tests/fixtures/alias_reexport/src/: lib.rs
crates/astedit/tests/fixtures/apply_write/: main.rs
crates/astedit/tests/fixtures/cross_file_import/src/: lib.rs
crates/astedit/tests/fixtures/glob_import/src/: lib.rs
crates/astedit/tests/fixtures/multi_def/src/: a.rs  b.rs
crates/astedit/tests/fixtures/name_only/src/: lib.rs  unrelated.rs
crates/astedit/tests/fixtures/rewrite_apply/: main.rs
crates/astedit/tests/fixtures/rewrite_javascript/: main.js
crates/astedit/tests/fixtures/rewrite_lang_filter/: main.py  main.rs
crates/astedit/tests/fixtures/rewrite_metavar/: main.rs
crates/astedit/tests/fixtures/rewrite_multimatch/: main.rs
crates/astedit/tests/fixtures/rewrite_python/: main.py
crates/astedit/tests/fixtures/rewrite_rust/: main.rs
crates/astedit/tests/fixtures/rewrite_tsx/: main.tsx
crates/astedit/tests/fixtures/rewrite_typescript/: main.ts
crates/astedit/tests/fixtures/same_file/: main.rs
crates/astedit/tests/fixtures/wildcard_reexport/src/: lib.rs
crates/codegraph/: Cargo.toml
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/src/: error.rs  hash.rs  index.rs  lang.rs  lib.rs
crates/codegraph-core/src/queries/: javascript_defs.scm  javascript_imports.scm  javascript_refs.scm  python_imports.scm  python_refs.scm  rust_defs.scm  rust_imports.scm  typescript_defs.scm  typescript_imports.scm  typescript_refs.scm
crates/codegraph-core/tests/: file_meta_test.rs  hash_test.rs  reexport_test.rs
crates/codegraph-core/tests/fixtures/reexport_js/: lib.js
crates/codegraph-core/tests/fixtures/reexport_py/: lib.py  widgets.py
crates/codegraph-core/tests/fixtures/reexport_rust/: inner.rs  lib.rs
crates/codegraph/src/: cli.rs  index.rs  lang.rs  main.rs  output.rs  resolve.rs  walk.rs
crates/codegraph/src/commands/: callees.rs  callers.rs  find_refs.rs  impact.rs  mod.rs
crates/codegraph/src/queries/: javascript_imports.scm  python_defs.scm  python_imports.scm  rust_imports.scm  rust_refs.scm  typescript_imports.scm
crates/codegraph/tests/: callees_test.rs  callers_test.rs  cli_test.rs  find_refs_test.rs  impact_test.rs  index_test.rs
crates/codegraph/tests/fixtures/multi_lang/js_app/src/: index.js  util.js
crates/codegraph/tests/fixtures/multi_lang/py_app/: auth.py  handlers.py  user.py
crates/codegraph/tests/fixtures/multi_lang/rust_app/: Cargo.toml
crates/codegraph/tests/fixtures/multi_lang/rust_app/src/: auth.rs  handlers.rs  lib.rs
crates/codegraph/tests/fixtures/multi_lang/ts_app/src/: auth.ts  component.tsx  handlers.ts  user.ts
crates/codemap/: Cargo.toml
crates/codemap/src/: cli.rs  lang.rs  main.rs  symbols.rs
crates/codemap/src/commands/: files.rs  symbols.rs
crates/codemap/src/queries/: javascript.scm  rust.scm  typescript.scm
crates/codemap/tests/fixtures/sample_project/src/: component.tsx  types.ts
docs/superpowers/plans/: 2026-05-20-skills-distribution.md  2026-05-20-skills-monorepo-codemap.md  2026-05-21-astedit-pr1-codegraph-core.md  2026-05-21-astedit-pr2-rename.md  2026-05-21-codegraph-mvp.md  2026-05-22-astedit-pr3-rewrite.md
docs/superpowers/specs/: 2026-05-20-skills-distribution-design.md  2026-05-21-astedit-design.md
scripts/: build-skills.sh  install.sh
skills/codemap/: Cargo.toml  README.md  SKILL.md
skills/codemap/src/: lang.rs  main.rs  output.rs  symbols.rs  walk.rs
skills/codemap/src/commands/: files.rs  find.rs  mod.rs  stats.rs  symbols.rs  tree.rs
skills/codemap/src/queries/: python.scm
skills/codemap/tests/: files_test.rs  find_test.rs  stats_test.rs  symbols_test.rs
skills/codemap/tests/fixtures/sample_project/: app.py
skills/codemap/tests/fixtures/sample_project/src/: lib.rs  util.js
skills/ny-astedit/: SKILL.md
skills/ny-auto-pipeline/: SKILL.md
skills/ny-codegraph/: SKILL.md
skills/ny-codemap/: SKILL.md
