[workspace]
resolver = "2"
members = ["skills/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["AssetsArt"]
repository = "https://github.com/AssetsArt/skills"
homepage = "https://github.com/AssetsArt/skills"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ignore = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
