[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.2"
edition = "2021"
rust-version = "1.74"
license = "MIT"
authors = ["AssetsArt"]
repository = "https://github.com/AssetsArt/skills"
homepage = "https://github.com/AssetsArt/skills"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
rayon = "1"
ast-grep-core     = "=0.38.7"
ast-grep-config   = "=0.38.7"
ast-grep-language = "=0.38.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
