[package]
name = "codegraph"
description = "Semantic cross-references for a codebase: find-refs, callers, callees, impact. Built for AI coding agents."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "codegraph"
path = "src/main.rs"

[dependencies]
codegraph-core = { path = "../codegraph-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
